--- a/css/style.css
+++ b/css/style.css
@@ -564,13 +564,15 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  align-items: center;
 }
 
 .login-left-bg {
-  height: 100vh;
+  height: 100svh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background-color: #162d48;
 }
 
@@ -599,7 +601,7 @@ a {
 .login-box {
   width: 450px;
   height: 450px;
-  margin: 50px 100px 0;
+  margin-left: 100px;
   color: #F8F8FF;
   background-color: #5e95a1;
   padding: 50px;
