--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ a {
   text-decoration: none;
 }
 
+#main-content {
+  border-top: 2px dashed #2f4048;
+}
+
 /* =========================
    Navbar
 ========================= */
@@ -162,6 +166,7 @@ a {
   gap: 20px;
   background-color: #5e95a1;
   padding-left: 20px;
+  border-right: 1px dotted #2f4048;
 }
 
 .destination-details input {
@@ -240,12 +245,18 @@ a {
   height: 50px;
 }
 
+.details {
+  background-color: #dbdbdb;
+}
+
 #loc-header {
+  color: #2f4048;
   font-weight: normal;
   font-size: 1rem;
 }
 
 #loc-info {
+  color: #2f4048;
   font-weight: bold;
   font-size: 1rem;
 }
@@ -272,10 +283,15 @@ a {
 }
 
 .zoom-buttons button {
+  border: 3px solid #2f4048;
+  color: #2f4048;
+  background-color: #F8F8FF;
   width: 50px;
   height: 50px;
-  font-size: 20px;
-  border-radius: 15px;
+  font-size: 1.4rem;
+  font-weight: 600;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
 /* =========================
