--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,7 @@ a {
 }
 
 .destination-details input {
+  width: 100%;
   border-radius: 20px;
   font-size: 15px;
   padding: 10px 10px 10px 15px;
@@ -181,14 +182,16 @@ a {
 
 .search-container {
   position: relative;
-  width: 220px;
+  width: 100%;
   margin-bottom: 10px;
 }
 
 .autocomplete-results {
   border: 1px solid #ccc;
+  border-radius: 10px;
   position: absolute;
   top: 100%;
+  margin-top: 1px;
   left: 0;
   background-color: white;
   max-height: 200px;
@@ -324,6 +327,7 @@ a {
   position: relative;
   display: inline-block;
   cursor: grab;
+  user-select: none;
 }
 
 .campus-map:active {
