--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ a {
 .emergency-marker {
   width: 24px;
   height: 24px;
-  background-image: url('/favicon.ico');
+  background-image: url('/assets/images/location.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
