--- a/css/style.css
+++ b/css/style.css
@@ -223,11 +223,10 @@ a {
 }
 
 .room-info img {
-  display: block;
-  margin: 10px auto 0;
-  width: 100%;
   max-width: 500px;
-  height: 250px;
+  max-height: 40vh;
+  width: 100%;
+  height: auto;
   object-fit: contain;
   border-radius: 8px;
 }
