--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ a {
   padding: 35px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 25px;
   background-color: #5e95a1;
   border-right: 1px dotted #2f4048;
 }
@@ -186,10 +186,15 @@ a {
   gap: 10px;
 }
 
+.routing-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .search-container {
   position: relative;
   width: 100%;
-  margin-bottom: 10px;
 }
 
 .autocomplete-results {
